# cube-lab

./: .gitignore  .gitmodules  Makefile  README.md  bootstrap.sh  bootstrap_workspace.sh  constellation_detection.py  cube_cli.py  cube_network_demo.py  dev_workspace.sh  learning_cube.py  metrics_demo.py  mimulus_app.py  observer_sky_demo.py  pyproject.toml  pytest.ini  sequence_lab.py  setup_workspace.sh  signature_demo.py
cube-lab/: .gitmodules  Makefile  bootstrap.sh  bootstrap_workspace.sh  dev_workspace.sh  setup_workspace.sh
cube-lab/hypercube-observer/: README.md  cube_demo.py  cube_lab.py  edge_memory.py  interior_field_demo.py  observer_sky_animation.py  random  synth_demo.py  tesseract_demo.py
examples/: run_mimulus.py
experiments/: classic_shifts_demo.py  cube_animation.py  debruijn_demo.py  entropy_convergence_demo.py  entropy_heatmap.py  entropy_sweep_demo.py  hypercube_visual_demo.py  observe_cube.py  sft_entropy_experiment.py  symbolic_sequence_demo.py  trajectory_similarity_demo.py  wang_tiling_demo.py
integration-tests/: test_cube_explorer.py  test_engine_core.py  test_hypercube_observer.py  test_pipeline.py  test_workspace_imports.py
symbolic-core/examples/: search_rules.py
symbolic-core/symbolic_core/: __init__.py  rules.py  scoring.py  simulator.py  state.py
symbolic-core/tests/: test_rules.py  test_search.py  test_state.py
symbolic-engine/: pyproject.toml  test_cube_explorer.py  test_engine_core.py  test_hypercube_observer.py  test_pipeline.py
tests/: test_cube.py  test_entropy.py
tools/: demo.py  doctor.sh
(+55 files in other folders)
